# Weather

./: .gitignore  Api.py  DbHelper.py  README.md  Utils.py  main.py  pyproject.toml
Db/: weatherDB.db
